--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* type selector */ 
+/* type selector */
 
 p {
   font-size: 1em; /* 16px, 7pt, 100%, 1em */
@@ -10,4 +10,5 @@ figcaption {
   font-size: 0.75em;
   line-height: 1.5em;
   font-family: Georgia, "New Times Roman", serif;
+  font: normal 0.75em/1.5em 
 }
