--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,5 @@ figcaption {
   font-family: Georgia, "New Times Roman", serif;*/
   font: normal 0.75em/1.5em Georgia, "New Times Roman", serif;
   color: #000000;
+  text-align: right;
 }
