Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,9 @@ figcaption {
 }
 
 /* Class selector */
+
+.milk-text {
+  font: bold 2.6em Georgia, serif;
+  color: white;
+  text-shadow: 0 2px 3px #000;
+}
