Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,10 @@ figcaption {
 #logo h2 {
   font-family: cursive;
 }
+
+/* Pseudo Selector */
+
+#details a:link {
+  color: black;
+  text-decoration: none;
+}
