--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,12 @@ figcaption {
 
 /* Pseudo Selector */
 
-#details a:link {
+#details a:link,
+#details a:visited {
   color: black;
   text-decoration: none;
+}
+
+#details a:visited {
+  color: blac
 }
