Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ figcaption {
   text-decoration: none;
 }
 
-#details a:visited {
+#details a:hover {
   color: black;
   text-decoration: underline;
 }
